# TicTacToe-with-patterns

./: .gitignore  CMakeLists.txt  README.md  board.cpp  board.h  board_printer.cpp  board_printer.h  board_printer_factory.h  ecell.h  ewinner.h  main.cpp
controllers/: controller.h  user_controller.cpp  user_controller.h
game/: game.cpp  game.h  move.h
game/board/: board.cpp  board.h  board_printer.cpp  board_printer.h  board_printer_factory.h
input/: console.cpp  console.h  input_manager.cpp  input_manager.h
input/linux/: console.cpp
input/windows/: console.cpp
